# cmake_vcpkg_doctest_template

./: .gitignore  CMakeLists.txt  README.md  README_dependencies.md  README_troubleshooting.md  conanfile.txt  vcpkg.json
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml
configured_files/: config.hpp.in
src/: main.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  main.cpp  tests.cpp
